[enh] added screenshot of the GDS

--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@
 project: 
   title: "Newmot SoC"
   description: "Simple SoC dmonstrating a Stepper Motor step/dir generator, and litex wishbone / uart / pwm"
-  picture: docs/empty.png
+  picture: docs/newmot.png
   author: "Charles-Henri Mousset"
   github: https://github.com/chmousset/caravel_multi_newmot
   license: LICENSE
