--- a/info.yaml
+++ b/info.yaml
@@ -13,13 +13,13 @@ caravel_test:
   recipe: "coco_test"
   directory: "caravel_test"
   id: 1
-  module_name: "wrapped_project"
-  instance_name: "wrapped_project"
+  module_name: "wrapped_newmot"
+  instance_name: "wrapped_newmot"
 
 # module test
 module_test:
   recipe: "all"
-  directory: "project directory"
+  directory: "dv"
   makefile: "Makefile"
 
 # run the wrapper formal proof
@@ -34,11 +34,11 @@ openlane:
 # source required for various configs and module instantiation
 source:
     - wrapper.v
-    - other source files here
+    - newmot.v
 
 # gds - check size = 300x300, nothing on metal 5, do a DRC, check 141 tristate buffers, check LVS
 gds:
   directory: "gds"
-  gds_filename: "project.gds"
-  lvs_filename: "project.lvs.powered.v"
-  lef_filename: "project.lef"
+  gds_filename: "wrapped_newmot.gds"
+  lvs_filename: "wrapped_newmot.lvs.powered.v"
+  lef_filename: "wrapped_newmot.lef"
